k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: occ
  labels:
    app: occ
spec:
  type: ClusterIP
  ports:
  - name: otlp-grpc
    port: 4317
    targetPort: otlp-grpc
    protocol: TCP
  - name: otlp-http
    port: 4318
    targetPort: otlp-http
    protocol: TCP
  - name: api
    port: 8090
    targetPort: api
    protocol: TCP
  selector:
    app: occ
